--- a/AVS437/03_parasites.html
+++ b/AVS437/03_parasites.html
@@ -28,7 +28,7 @@ Helminths are divided into platyhelminths (cestodes and trematodes) and nematode
 <B><em>Cestodes</em></B><BR>
 Cestodes have a predator-prey life cycle:<br>
 <A HREF=https://images.app.goo.gl/GEsJ6qaJj72BMxjd7>Echinoccus granulosus</A>, tape worm of dogs uses ruminants as prey.<BR>
--<A HREF=https://en.wikipedia.org/wiki/Dipylidium_caninum>Dipylidium caninum</A>flea is internediate host<p>
+<A HREF=https://en.wikipedia.org/wiki/Dipylidium_caninum>Dipylidium caninum</A> - flea is the prey eaten by the dog or cat<p>
 <B><em>Trematodes</em></B><br>
 <A HREF=https://en.wikipedia.org/wiki/Liver_fluke>Liver fluke</A><P>
 <B><em>Nematodes</em></B><br>
@@ -36,46 +36,55 @@ It may be a gross oversimplification, but round worms may be subdivided into <A 
 </blockquote>
 <B>Ectoparasites</B>
 <Blockquote>
-<b>Mites</B><br>
-Mites are very small arachnids which complete their lifecycle on the host
-<em>Otodectes cynotis</em> - dog end cat ear mite (otodectic mange)<br>
-<em>Notoedres cati</em> - scabies in cats (notoedric mange) <br>
-<em>Sarcoptes scabei</em> var <em>canis</em> - a.k.a scabies - sarcoptic mange in dogs. Contagious and transmissible to humans, but self-limiting i.e. cannot complete life cycle.<br> 
-<em>Cheyletiella blakei</em> (cats) and <em>Cheyletiella yasguri</em> (dogs) highly contagious walking dandruff.<br>
-<em>Demodex canis</em> - Demodectic mange. Localized in puppies, but can be generalized in immunosuppressed puppies and adulta. Normally part of the local flora i.e. not contagious.<p>
-<B>Ticks</B><br>
-Ticks are arachnids larger than mites in the subclass Acari. They are Major transmitters of disease. They include<br> 
-<em>Dermancentor variabilis</em> American Dog tick<br>
-<em>Dermacentor andersoni</em> the Rocky Mountain wood tick. Both of these can spread <em>Rickettsia rickettsii</em> Rocky Mountain Spotted Fever and other diseases.<P>
-<em>Amblyomma</em> e.g. lone star tick. Also transmits RMSF, and Babesia.<BR>
-<Ixodes spp>  Transmit <em>Borrelia burgdorferi</em> (Lyme disease), Anaplasmosis<p> 
-<A HREF=https://en.wikipedia.org/wiki/Tick_paralysis>Tick paralysis</A> is cause by a potent salivary neurotoxin. Removal of the tick can eliminate the cause. But this is why we want to remove the whole head due to salivary nature of the toxin. 
-<B>Insects</B>
-Insects can be divided into lice, fleas, mosquitoes,midges, flies, and caterpillars. 
+<A HREF=https://en.wikipedia.org/wiki/Mite><b>Mites</B></A><br>
+Mites are very small arachnids which complete their lifecycle on the host. You should also review the Merk Manual <A HREF=https://www.merckvetmanual.com/integumentary-system/mange/mange-in-dogs-and-cats>mange page</A>. <BR>
+<em>Otodectes cynotis</em> - dog end cat ear mite (<A HREF=https://en.wikipedia.org/wiki/Ear_mite>otodectic mange</A>)<br>
+<A HREF=https://en.wikipedia.org/wiki/Notoedric_mange><em>Notoedres cati</em></A> - scabies in cats (notoedric mange) <br>
+<A HREF=https://www.vet.cornell.edu/departments/riney-canine-health-center/canine-health-information/sarcoptic-mange-scabies><em>Sarcoptes scabei</em></A> var <em>canis</em> - a.k.a scabies - sarcoptic mange in dogs. Contagious and transmissible to humans, but self-limiting i.e. generally it cannot complete life cycle, but there may be <A HREF=https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3576775/#:~:text=Sarcoptes%20scabiei%20var%20cannis%20affects,oozing%2C%20crusting%20and%20scab%20formation.>exceptions</A>.<br> 
+<A HREF=https://en.wikipedia.org/wiki/Cheyletiella_blakei><em>Cheyletiella blakei</em></A> (cats) and <A HREF=https://en.wikipedia.org/wiki/Cheyletiella_yasguri><em>Cheyletiella yasguri</em></A> (dogs) is highly contagious walking dandruff.<br>
+<A HREF=https://en.wikipedia.org/wiki/Demodex#D._canis<em>Demodex canis</em></A> - Demodectic mange. Localized and limited disease in puppies, but can be <A HREF=https://upload.wikimedia.org/wikipedia/commons/thumb/5/5d/Demodectic_mange_2.jpg/420px-Demodectic_mange_2.jpg>generalized</A> in immunosuppressed puppies and adults. Normally part of the local flora i.e. not contagious.<p>
+<A HREF=https://en.wikipedia.org/wiki/Tick><B>Ticks</B></A><br>
+Ticks are arachnids larger than mites in the subclass Acari. They are major transmitters of disease. Part of their life-cycle is off the host.
+Here is the <A HREF=https://www.merckvetmanual.com/integumentary-system/ticks/ticks>Merk manual page on ticks</A>. They include:<p> 
+<A HREF=https://en.wikipedia.org/wiki/Dermacentor_variabilis><em>Dermacentor variabilis</em></A> American Dog tick, and <A HREF=https://en.wikipedia.org/wiki/Dermacentor_andersonii> Dermacento andersonii</A>, the Rocky Mountain wood tick. Both can transmit <A HREF=https://en.wikipedia.org/wiki/Rickettsia_rickettsii><em>Rickettsia rickettsii</em></A>, <A HREF=https://en.wikipedia.org/wiki/Rocky_Mountain_spotted_fever>Rocky Mountain Spotted Fever (RMSF)</A> and other diseases.<P>
+<A HREF=https://en.wikipedia.org/wiki/Amblyomma_americanum><em>Amblyomma americanum</em></A> the lone star tick also transmits RMSF and <A HREF=https://en.wikipedia.org/wiki/Babesia>Babesia.</A><BR>
+<Ixodes spp>  transmit <A HREF=https://en.wikipedia.org/wiki/Lyme_disease><em>Borrelia burgdorferi</em></A>, causative agent of  Lyme disease, Anaplasmosis<p> 
+<A HREF=https://en.wikipedia.org/wiki/Tick_paralysis>Tick paralysis</A> is cause by a potent salivary neurotoxin. Removal of the tick can eliminate the cause. But this is why we want to remove the whole head of the tick along with the body due to the tick's salivary gland being the source of the toxin.<p> 
+<B>Insects</B><br>
+Insects can be divided into lice, fleas, mosquitoes, midges, flies, and caterpillars. 
 <blockquote>
-<B>Lice</B><br>
+<A HREF=https://en.wikipedia.org/wiki/Louse<B>Lice</B></A><br>
+Here is the <A HREF=https://www.merckmanuals.com/professional/dermatologic-disorders/parasitic-skin-infections/lice>Merck Manual entry</A>
 <A HREF=https://images.app.goo.gl/SNQA7Xfb1KuLczoh7>lifecycle</A> is on the host 
-<em><b>Horses</b></em><br>
-<em>Hematopinus asini</em> - sucking<br>
-<em>Damalinia equi</em> - biting<p>
-<em><b>Cattle></b></em><br>
-<em>Linignathus vituli</em> - sucking<br>
-<em>Bovicola bovis</em> - biting<p>
+<blockquote>
+<A HREF=https://www.merckvetmanual.com/integumentary-system/lice/lice-in-horses-and-donkeys><em><b>Horses</b></em></A><br>
+<em>Hematopinus asini</em> - sucking louse</A><br>
+<em>Damalinia equi</em> - biting louse<p>
+<A HREF=https://www.merckvetmanual.com/integumentary-system/lice/lice-in-cattle><em><b>Cattle</b></em></A><br>
+<em>Linignathus vituli</em> - sucking louse<br>
+<em>Bovicola bovis</em> - biting louse<p
+<em><b>Humans</b></em><br>
+<em>Phthiriasis pubis</em> - the <A HREF=https://en.wikipedia.org/wiki/Crab_louse>pubic louse</A><br>
+<em>Pediculus humanus humanus</em> - <A HREF=https://en.wikipedia.org/wiki/Body_louse>the body louse</A>.
+</blockquote>
 <B>Fleas</B><br>
-<em>Ctenocephalides canis></em> - dog fleas<br>
-<em>Ctenocephalides felis</em> - cat fleas<p>
-<B>Mosquitoes</B><br>
-<em> Aedes, Anopheles, Culex, Culiseta, Psorophora</em> spp. Transmit malaria (Plasmodium), heart worm (Dirofilaria immitis). Major importance is as a vector of other diseases.<p>  
-<em><B>Midges</B></em><br>
+<A HREF=https://en.wikipedia.org/wiki/Dog_flea><em>Ctenocephalides canis</em></A> - dog fleas<br>
+<A HREF=https://en.wikipedia.org/wiki/Cat_flea><em>Ctenocephalides felis</em></A> - cat fleas. Sometimes can infest dogs too.<br>
+<em>Ctenocephalides</em> spp. are intermediate hosts for <em>Dipylidium caninum</em><p>
+<A HREF=https://en.wikipedia.org/wiki/Mosquito><B>Mosquitoes</B></A><br>
+Video of <A HREF=https://youtu.be/mroLfTPhL90>mosquito life-cycle</A>, and a video showing <A HREF=https://youtu.be/PgUKaZ4t-oU?si=D3H06-YCwwmciscK>wrigglers and tumblers</A><P>
+<em> Aedes, Anopheles, Culex, Culiseta, Psorophora</em> spp. Transmit <A HREF=https://en.wikipedia.org/wiki/Malaria>malaria</A> by protozoa of the <A HREF=https://en.wikipedia.org/wiki/Plasmodium>Plasmodium</A> genera, and heart worm (<A HREF=https://www.merckvetmanual.com/circulatory-system/heartworm-disease/heartworm-disease-in-dogs,-cats,-and-ferrets>Dirofilaria immitis</A>). Major importance of mosquitoes is their role as vectors of other diseases.<p>  
+<A HREF=https://en.wikipedia.org/wiki/Midge><B>Midges</B></A><br>
 <em>Culicoides</em> spp - bite causes  hypersensitivity in horses<P>
-<em><b>Flies</b></em><br>
-<em>Gasterophilus intestinalis</em> - horse bot flies<br>
-<em>Stomxys calcitrans</em> - horse stable fly<br>
-<em>Tabanus</em> spp - tabanid horse flies lacerating mouth pats, spread Equine Infectious Anemia<br> 
-<em>Chrysops</em> spp- tabanid deer flies<br>
-<em> Hypoderma bovis</em> - cattle warble fly<p>
+<A HREF=https://www.merckvetmanual.com/horse-owners/skin-disorders-of-horses/flies-and-mosquitoes-of-horses><b>Flies</b></A><br>
+Flies are especially bothersome to horses and cattle. Particular types of fly include:<br>
+<A HREF=https://entnemdept.ufl.edu/creatures/livestock/horse_bot_fly.htm><em>Gasterophilus intestinalis</em></A> - horse bot flies. Larvae can infest the horse's stomach.<br>
+<A HREF=https://entnemdept.ufl.edu/creatures/urban/medical/stomoxys_calcitrans.htm><em>Stomxys calcitrans</em></A> - horse stable fly<br>
+<A HREF=https://extension.okstate.edu/programs/livestock-entomology/tabanids.html#:~:text=Tabanids%20are%20a%20diverse%20group,peak%20from%20June%20to%20September.><em>Tabanus</em> spp</A> - tabanid horse flies lacerating mouth pats, spread Equine Infectious Anemia<br> 
+<A HREF=https://en.wikipedia.org/wiki/Chrysops><em>Chrysops</em></A> spp- tabanid deer flies also bite horses.<br>
+<A HREF=https://en.wikipedia.org/wiki/Warble_fly<em> Hypoderma bovis</em></A> - cattle warble fly: the larva emerges through the hide of infested cattle. <br><A HREF=https://en.wikipedia.org/wiki/Myiasis>Myiasis</A> is the name given to maggot infestation in flesh of a living animal or human.<p>
 <b>Caterpillars</B><br>
-Not really a parasite but seems the right place to include <A HREF=https://en.wikipedia.org/wiki/Eastern_tent_caterpillar>eastern tent caterpillars</A> 
+Not really a parasite but seems the right place to include <A HREF=https://en.wikipedia.org/wiki/Eastern_tent_caterpillar>eastern tent caterpillars</A>. These larvae were implicated in<A HREF=https://pubmed.ncbi.nlm.nih.gov/18725479/#:~:text=An%20epidemic%20of%20early%20fetal,reproductive%20loss%20syndrome%20(MRLS).> Mare Reproductive Loss Syndrome.</A>, an outbreak which occurred in Kentucky in 2001 causing approximately $500 million in losses. 
 </Blockquote>
 </body>
 </html> 
