--- a/AVS437/03_parasites.html
+++ b/AVS437/03_parasites.html
@@ -19,15 +19,15 @@ In this module we will survey parasites, which are eukaryotic organisms, other t
 <Blockquote>
 <A HREF=https://en.wikipedia.org/wiki/Coccidiosis#:~:text=Symptoms%20in%20cats%20include%20fever,are%20usually%20treated%20with%20clindamycin.>Coccidia<BR>
 <A HREF=https://en.wikipedia.org/wiki/Giardiagiardia>Giardia</A><BR>
-<A HREF=https://en.wikipedia.org/wiki/Malaria>Malaria</A><BR>
-<A HREF=https://www.cdc.gov/dpdx/sarcocystosis/index.html>Sarcocystis</A><BR>
+<A HREF=https://en.wikipedia.org/wiki/Malaria>Malaria - Plasmodium</A><BR>
+<A HREF=https://www.cdc.gov/dpdx/sarcocystosis/index.html>Sarcocystis sp</A><BR>
 </blockquote>
 <B>Helminths</B><BR>
 Helminths are divided into platyhelminths (cestodes and trematodes) and nematodes (roundworms). 
 <Blockquote>
 <B><em>Cestodes</em></B><BR>
 Cestodes have a predator-prey life cycle:<br>
-<A HREF=https://images.app.goo.gl/GEsJ6qaJj72BMxjd7>Echinoccus granulosus</A>, tape worm of dogs uses ruminants as prey.<BR>
+<A HREF=https://images.app.goo.gl/GEsJ6qaJj72BMxjd7>Echinococcus granulosus</A>, tape worm of dogs uses ruminants as prey.<BR>
 <A HREF=https://en.wikipedia.org/wiki/Dipylidium_caninum>Dipylidium caninum</A> - flea is the prey eaten by the dog or cat<p>
 <B><em>Trematodes</em></B><br>
 <A HREF=https://en.wikipedia.org/wiki/Liver_fluke>Liver fluke</A><P>
@@ -48,7 +48,7 @@ Ticks are arachnids larger than mites in the subclass Acari. They are major tran
 Here is the <A HREF=https://www.merckvetmanual.com/integumentary-system/ticks/ticks>Merk manual page on ticks</A>. They include:<p> 
 <A HREF=https://en.wikipedia.org/wiki/Dermacentor_variabilis><em>Dermacentor variabilis</em></A> American Dog tick, and <A HREF=https://en.wikipedia.org/wiki/Dermacentor_andersonii> Dermacento andersonii</A>, the Rocky Mountain wood tick. Both can transmit <A HREF=https://en.wikipedia.org/wiki/Rickettsia_rickettsii><em>Rickettsia rickettsii</em></A>, <A HREF=https://en.wikipedia.org/wiki/Rocky_Mountain_spotted_fever>Rocky Mountain Spotted Fever (RMSF)</A> and other diseases.<P>
 <A HREF=https://en.wikipedia.org/wiki/Amblyomma_americanum><em>Amblyomma americanum</em></A> the lone star tick also transmits RMSF and <A HREF=https://en.wikipedia.org/wiki/Babesia>Babesia.</A><BR>
-<Ixodes spp>  transmit <A HREF=https://en.wikipedia.org/wiki/Lyme_disease><em>Borrelia burgdorferi</em></A>, causative agent of  Lyme disease, Anaplasmosis<p> 
+<A HREF=https://en.wikipedia.org/wiki/Ixodes_scapularis><em>Ixodes scapularis</em></A> transmit <A HREF=https://en.wikipedia.org/wiki/Lyme_disease><em>Borrelia burgdorferi</em></A>, causative agent of Lyme disease, and also transmit <A HREF=https://www.cdc.gov/anaplasmosis/index.html#:~:text=Anaplasmosis%20is%20a%20disease%20caused,%2C%20chills%2C%20and%20muscle%20aches.>anaplasmosis</A><p> 
 <A HREF=https://en.wikipedia.org/wiki/Tick_paralysis>Tick paralysis</A> is cause by a potent salivary neurotoxin. Removal of the tick can eliminate the cause. But this is why we want to remove the whole head of the tick along with the body due to the tick's salivary gland being the source of the toxin.<p> 
 <B>Insects</B><br>
 Insects can be divided into lice, fleas, mosquitoes, midges, flies, and caterpillars. 
@@ -79,8 +79,8 @@ Video of <A HREF=https://youtu.be/mroLfTPhL90>mosquito life-cycle</A>, and a vid
 <A HREF=https://www.merckvetmanual.com/horse-owners/skin-disorders-of-horses/flies-and-mosquitoes-of-horses><b>Flies</b></A><br>
 Flies are especially bothersome to horses and cattle. Particular types of fly include:<br>
 <A HREF=https://entnemdept.ufl.edu/creatures/livestock/horse_bot_fly.htm><em>Gasterophilus intestinalis</em></A> - horse bot flies. Larvae can infest the horse's stomach.<br>
-<A HREF=https://entnemdept.ufl.edu/creatures/urban/medical/stomoxys_calcitrans.htm><em>Stomxys calcitrans</em></A> - horse stable fly<br>
-<A HREF=https://extension.okstate.edu/programs/livestock-entomology/tabanids.html#:~:text=Tabanids%20are%20a%20diverse%20group,peak%20from%20June%20to%20September.><em>Tabanus</em> spp</A> - tabanid horse flies lacerating mouth pats, spread Equine Infectious Anemia<br> 
+<A HREF=https://entnemdept.ufl.edu/creatures/urban/medical/stomoxys_calcitrans.htm><em>Stomoxys calcitrans</em></A> - horse stable fly<br>
+<A HREF=https://extension.okstate.edu/programs/livestock-entomology/tabanids.html#:~:text=Tabanids%20are%20a%20diverse%20group,peak%20from%20June%20to%20September.><em>Tabanus</em> spp</A> - tabanid horse flies lacerating mouth pats, spread Equine Infectious Anemia, which is detected by the Coggins test.<br> 
 <A HREF=https://en.wikipedia.org/wiki/Chrysops><em>Chrysops</em></A> spp- tabanid deer flies also bite horses.<br>
 <A HREF=https://en.wikipedia.org/wiki/Warble_fly<em> Hypoderma bovis</em></A> - cattle warble fly: the larva emerges through the hide of infested cattle. <br><A HREF=https://en.wikipedia.org/wiki/Myiasis>Myiasis</A> is the name given to maggot infestation in flesh of a living animal or human.<p>
 <b>Caterpillars</B><br>
