--- a/AVS353/REPRO.HTM
+++ b/AVS353/REPRO.HTM
@@ -55,7 +55,7 @@ Attendance and class participation =30%</P>
 </P>
 No text is required for this class.</Blockquote>
 <B>Video Archive</B></I><Blockquote>Videos of lectures may be accessed <A HREF=video_archive_AVS353.htm>here</A></Blockquote>
-
+<B>Cartoon Archive</B></I><Blockquote>Cartoons of lectures may be accessed <A HREF=cartoon_archive_AVS353.htm>here</A></Blockquote>
 <h2><center>Course Materials</center></h2></P>
 </P>
 <P>Review Quizzes</P>
