--- a/AVS353/video_archive_AVS353.htm
+++ b/AVS353/video_archive_AVS353.htm
@@ -23,18 +23,19 @@ The purpose of this page is to provide links to videos of lectures and  movies u
 <A HREF=https://video.maine.edu/media/2022-01-19_AVS+353_Grading_Aristotle./1_d5l680qb>2022-01-19 Lecture</A> <BR><A HREF=https://video.maine.edu/media/2021-01-27_AVS+353+Equine+Reproduction_Intro+and+Aristotle/1_cxtk69y7>2021-01-27 Lecture</A> <p>
 <B>Basic Mammalian Reproduction</B><BR> 
 ...in which we discuss basic mammalian reproduction and hormones.<p>
+<A HREF=https://video.maine.edu/media/AVS353-Equine+Reproduction/1_isccncsi>2024-01-31 Lecture</A><br>
 <A HREF=https://video.maine.edu/media/2022-01-26_AVS_353_Basic_Mammalian_Reproduction/1_up8bfml6>2022-01-26 Lecture</A> <BR>
 <A HREF=https://video.maine.edu/media/2020-02-03_AVS+353_Lecture_Basic-Reproduction_hormones/1_q4p51qpt>2021-02-03 Lecture</A><p>
-
 <!-- XXXXXXXXXXXXXXXXXXXXXXXX--> 
 ...and then we focus on seasonality, reproductive behavior, production of gametes, meiosis, follicles, sperm production and ovulation and the estrous cycle.<p>
+<A HREF=https://video.maine.edu/media/AVS353-Equine+Reproduction/1_qzinjctd>2024-02-07 Lecture</A><br>
 <A HREF=https://video.maine.edu/media/Clip+of+2022-02-02_AVS_353_Basic_Mammalian_Reproduction/1_1clrt0fp?st=0&ed=5160>2022-02-02 Lecture</A> <br>
 <A HREF=https://video.maine.edu/media/2020-02-10_AVS+353_Lecture_Basic-Reproduction_hormones-2/1_5giftn5x>2021-02-10 Lecture</A><p>
-
 <!-- XXXXXXXXXXXXXXXXXXXXXXXX--> 
 ... and finally we focus on fertilization, early embryonic development, parturition, lactation, and hormonal control<p>
+<A HREF=https://video.maine.edu/media/AVS353-Equine+Reproduction/1_40apbtnf>2024-02-14 Lecture</a><BR>
 <A HREF=https://video.maine.edu/media/2022_02_09_AVS_353_regnancy_parturition_etc/1_lh640w1s>2022-02-09 Lecture</A> <br>
-<A HREF=https://video.maine.edu/media/2020-02-17_AVS+353_Lecture_Basic-Reproduction_hormones-3/1_bqe74ldy>2021-02-17 Lecture</A><p>
+<A HREF=https://video.maine.edu/media/2020-02-17_AVS+353_Lecture_Basic-Reproduction_hormones-3/1_bqe74ldy>2021-02-17 Lecture</A>
 <p>
 <B>Reproductive Anatomy</B><BR>
 Estrous cycle review and Reproductive Anatomy: Pineal gland, hypothalamus, pituitary, ovaries, uterus, follicle, CL, counter current exchange mechanism for systemic distribution of prostaglandin, uterine glands, myometrium, cervix, changes with cycle, etc.<p>
