--- a/AVS437/05_immunity.html
+++ b/AVS437/05_immunity.html
@@ -42,6 +42,19 @@ To mediate <A HREF=https://www.ncbi.nlm.nih.gov/books/NBK26827/figure/A4539/?rep
 Cytotoxic T cells (effector TH1 cells) can <A HREF=https://www.ncbi.nlm.nih.gov/books/NBK26926/figure/A4499/?report=objectonly>kill cells</A> in two ways, first by introducing enzymes (granzymes, which trigger the caspase cascade, or by the Fas Ligand on the cytoxic T cell binding the Fas protein which induces the capsase cascde, leading to apoptosis.<P> 
  B cells also require two signals for their activation. The first signal is through binding of the  
  <A HREF=https://www.ncbi.nlm.nih.gov/books/NBK26827/figure/A4544/?report=objectonly>free antigen by the B cell receptor</A> The complement systen can serve as a <A HREF=https://www.ncbi.nlm.nih.gov/books/NBK26827/figure/A4545/?report=objectonly>co-receptor for this first signal</A>. Later in the immune response Fc receptors can be inhibitory when IgG is plentiful and blocks activation.<p>
-T cells provide the <A HREF=https://www.ncbi.nlm.nih.gov/books/NBK26827/figure/A4547/?report=objectonly> second signal in B cell activation</A> via the CD 40 ligand and participate in immunological memory.  
+T cells provide the <A HREF=https://www.ncbi.nlm.nih.gov/books/NBK26827/figure/A4547/?report=objectonly> second signal in B cell activation</A> via the CD 40 ligand and participate in immunological memory.<P>
+B activation:<P>
+-Requires cross linking through involving two B Cell receptors or a B cell receptor and a complement. <br>
+Activation of cell through phosphorylation of proteins via a tyrosine kinase.<br>
+  
+	-T cell independent
+		Involves antigens such as lipopolysaccharide, carbohydrates, repeating motifs
+		Only produces an IgM response. Does not devdelop the more substatntial IgG response.
+		Cross linking can be IgG-IgG or IgG-Complement
+		B cell has no memory of the event because a T cell is not involved.	
+	-T cell dependent  
+		Involves protein antigens, 
+		In a strange reversal of roles,  B cell plays the role of presenting antigen to a T helper cell. The antigen is first bound to the B cell receptor, and internalized in the way a virus enter a cell. The antigen is then broken up into smaller fragments, and then presented to a T helper cell "in the context of the MHCII", at the margin of the lymph node follicle. The T helper cell uses its T cell receptor to check out the antigen fragment. The epitopes may be different, but so long as the two epitopes are genuinely part or the same antigen or the same organism, it will work.   
+		The T helper cell then secretes cytokines (IL 4,5, 10, 13?) i.e. from IgM to IgG, IgE, or IgA, to induce the plasma cell to grow up and indulge in antibody class switching to induce the appropriate response base on the antigens that seem to be coming into the lymphnode.    
 </body>
 </html> 
