--- a/AVS353/video_archive_AVS353.htm
+++ b/AVS353/video_archive_AVS353.htm
@@ -33,6 +33,8 @@ The purpose of this page is to provide links to videos of lectures and  movies u
 <A HREF=https://video.maine.edu/media/2020-02-10_AVS+353_Lecture_Basic-Reproduction_hormones-2/1_5giftn5x>2021-02-10 Lecture</A><p>
 <!-- XXXXXXXXXXXXXXXXXXXXXXXX--> 
 ... and finally we focus on fertilization, early embryonic development, parturition, lactation, and hormonal control<p>
+
+<A HREF=https://video.maine.edu/media/AVS353-Equine+Reproduction/1_irh10q1q>2024-02-21 Lecture</a><BR>
 <A HREF=https://video.maine.edu/media/AVS353-Equine+Reproduction/1_40apbtnf>2024-02-14 Lecture</a><BR>
 <A HREF=https://video.maine.edu/media/2022_02_09_AVS_353_regnancy_parturition_etc/1_lh640w1s>2022-02-09 Lecture</A> <br>
 <A HREF=https://video.maine.edu/media/2020-02-17_AVS+353_Lecture_Basic-Reproduction_hormones-3/1_bqe74ldy>2021-02-17 Lecture</A>
