--- a/AVS353/video_archive_AVS353.htm
+++ b/AVS353/video_archive_AVS353.htm
@@ -41,6 +41,8 @@ The purpose of this page is to provide links to videos of lectures and  movies u
 <p>
 <B>Reproductive Anatomy</B><BR>
 Estrous cycle review and Reproductive Anatomy: Pineal gland, hypothalamus, pituitary, ovaries, uterus, follicle, CL, counter current exchange mechanism for systemic distribution of prostaglandin, uterine glands, myometrium, cervix, changes with cycle, etc.<p>
+<A HREF=https://video.maine.edu/media/AVS353-Equine+Reproduction/1_pmb716hv>
+2024-02-28_Lecture</A><br>
 <A HREF=https://video.maine.edu/media/2022_03_02_AVS_353_estrous_cycle_reproductive_anatomy/1_z44hk818>2022-03-02 Lecture</A> <br>
 <A HREF=https://video.maine.edu/media/2020-02-24_AVS+353_Lecture_Reproductive_Anatomy_1/1_egc4h0lk>2021-02-24 Lecture</A> <br>
 <A HREF=https://video.maine.edu/media/2021-03-03_AVS+353_Lecture_Reproductive_Anatomy_2/1_kf39mrc5>2021-03-03 Lecture</A>  <p>
@@ -51,11 +53,13 @@ Reproductive Seasonality: a review of imposed breeding seasons and reproductive 
 <p>
 <B>Estrous Cycle</B><br>
 Estrous Cycle: a review of the changes between estrus and diestrus of equine behavior, ovarian dynamics (follicular growth, ovulation, CL maintenance and luteolysis), gonadotropins (FSH and LH), ovarian steroids (estrogen and progesterone), inhibin, and prostaglandin F 2 alpha.<p>
-<A HREF=https://video.maine.edu/media/2022_02_23_AVS_353_estrous_cycle/1_77jav7wj>2022-23-17 Lecture</A>  
+<A HREF=https://video.maine.edu/media/AVS353-Equine+Reproduction/1_9w954t62>2024-03-08 Lecture</A><br>
+<A HREF=https://video.maine.edu/media/2022_02_23_AVS_353_estrous_cycle/1_77jav7wj>2022-23-17 Lecture</A><br>  
 <A HREF=https://video.maine.edu/media/2021-03-17_AVS+353_Lecture_Estrous-Cycle/1_vtwahzw2>2021-03-17 Lecture</A> 
 <p>
 <B>Endocrinology of Pregnancy</B><BR>
 Endocrinology of Pregnancy. The three luteal responses, the role of progestogens and estrogens from the ovary and fetoplacental unit (fetal gonads and placenta) in supporting pregnancy. Appearance of equine chorionic gonadotropin to drive second and third luteal responses. Development of the fetus and fetal movement.<p>
+<A HREF=https://video.maine.edu/media/AVS353-Equine+Reproduction/1_knycsmaw>2024-03-20 Lecture</A><br>
 <A HREF=https://video.maine.edu/media/2022_03_09_AVS_353_endocrinology_of_pregnancy/1_5ijrgehc>2022-03-09 Lecture</A> <br>
 <A HREF=https://video.maine.edu/media/2022_03_23_AVS_353_endocrinology_of_pregnancy/1_wbox6hzk>2022-03-23 Lecture</A> <br>
 <A HREF=https://video.maine.edu/media/2022_03_30_AVS_353_fetal_development/1_7kswb5rw>2022-03-30 Lecture</A> <p>
