--- a/AVS353/video_archive_AVS353.htm
+++ b/AVS353/video_archive_AVS353.htm
@@ -59,6 +59,7 @@ Estrous Cycle: a review of the changes between estrus and diestrus of equine beh
 <p>
 <B>Endocrinology of Pregnancy</B><BR>
 Endocrinology of Pregnancy. The three luteal responses, the role of progestogens and estrogens from the ovary and fetoplacental unit (fetal gonads and placenta) in supporting pregnancy. Appearance of equine chorionic gonadotropin to drive second and third luteal responses. Development of the fetus and fetal movement.<p>
+<A HREF=https://video.maine.edu/media/AVS353-Equine+Reproduction/1_3qal8g9g>2024-03-27 Lecture</A><br>
 <A HREF=https://video.maine.edu/media/AVS353-Equine+Reproduction/1_knycsmaw>2024-03-20 Lecture</A><br>
 <A HREF=https://video.maine.edu/media/2022_03_09_AVS_353_endocrinology_of_pregnancy/1_5ijrgehc>2022-03-09 Lecture</A> <br>
 <A HREF=https://video.maine.edu/media/2022_03_23_AVS_353_endocrinology_of_pregnancy/1_wbox6hzk>2022-03-23 Lecture</A> <br>
@@ -66,6 +67,7 @@ Endocrinology of Pregnancy. The three luteal responses, the role of progestogens
 <A HREF=https://video.maine.edu/media/2021-03-31_AVS+353_Lecture_Endocrinology_of_pregnancy/1_uiylp0pk>2021-03-31 Lecture</A> 
 <p>
 The embryonic vesicle, its mobility. Early embryology related to appearance on ultrasound. Allantois and yolk sac. Formation of the three walled placenta.<br>
+<A HREF=https://video.maine.edu/media/AVS353-Equine+Reproduction/1_jn36rakw>2024-03-07</A> <P> 
 <A HREF=https://video.maine.edu/media/2021-04-08_AVS+353_Lecture_Endocrinology_of_pregnancy_2/1_txopdujs>2021-04-07</A> <P> 
 This video explains key concepts in early embryology. The inner cell mass or embryonic disk consists of two layers of cells (epiblast and hypoplast, epi meaning "upon", and hypo meaning "under"), like two slices of bread.  Cells of the epiblast multiply and form a new middle layer, to create a sandwich. The three layers are called ectoderm (from the epiblast - this will become the skin and nervous tissue), mesoderm (the middle layer, which will becomes bone, muscle, connective tissue and the cardiovascular system), and endoderm (the gut and related structures such as liver). The endoderm migrates and spreads under the chorion, forming an inner wall of the blastocyst, creating the yolk sack. The mesoderm then migrates between the ectoderm (chorion) and endoderm creating a middle layer, serving as a robust system of blood vessels for the placenta. The three layers of the placenta represent the three layers of the embryonic disc (ectoderm, mesoderm, endoderm).   <P>
 The migration of endoderm and formation of the mesoderm coincides with invagination of the embryo, gastrulation, to enclose the endoderm as a tube with openings at either end (to become anus and mouth), and creates an opening in the central portion connecting the gut to the yolk sac, at the site which will become the umbilicus.<p>  
@@ -73,6 +75,8 @@ The migration of endoderm and formation of the mesoderm coincides with invaginat
 <P>
 <B>Pregnancy and Foaling</B><br>
 <p><Blockquote>
+
+<A HREF=https://video.maine.edu/media/AVS353-Equine+Reproduction/1_tg1ryc09>2024-04-10 Lecture</A> Management through pregnancy.<br>
 <A HREF=https://video.maine.edu/media/2022-04-13_AVS353_pregnancy_and_foaling/1_e2hnvk5i>2022-04-13 Lecture</A> Management through pregnancy and videos of fetal positioning.<br>
 <A HREF=https://video.maine.edu/media/2021-04-14_AVS+353_Lecture_Intro-to-foaling-videos./1_wq3ea4ri>2021-04-14</A> Some preparation for the following videos.<p>
 <A HREF=https://video.maine.edu/media/AVS353_0054_11monthsofintrauterineactivity_video-2020-04-15/1_bwtegdyq>Click here</A> to see a video by Dr Ginther on movements of the fetus during pregnancy. (This video is copyrighted and is shown here for students in AVS 353 at the University of Maine.)<p>
