--- a/AVS353/cartoon_archive_AVS353.htm
+++ b/AVS353/cartoon_archive_AVS353.htm
@@ -20,6 +20,7 @@ a {
 The purpose of this page is to provide links to cartoons, spreadsheets or other documents drawn in class. The cartoons are grouped according to subject. Cartoons are labelled by date of the lecture.<p>
 <B>Aristotle and Equine Reproduction</B><BR>
 ...in which we grade Aristotle on his knowledge of equine reproduction.<p>
+<A HREF=https://drive.google.com/file/d/1sDCmNP7dmbcNx2L4LGNH0OlWva-l28mx/view?usp=drive_link>2025_01_22</A><p>
 <B>Basic Mammalian Reproduction</B><BR> 
 ...in which we discuss basic mammalian reproduction and hormones.<p>
 
