--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ a {
 <BODY bgcolor=GainsBoro>
 <H1><CENTER>Robert Causey - Helpful Links for Students</CENTER></H1>
 <P>
-<div align="right"><I>Updated Saturday 12/06/2023</I></div>
+<div align="right"><I>Updated Wesnesday 01/29/2025</I></div>
 <!--<center>
 <H2> Link to Assignments List for AVS 146 </H2>
 		<A HREF= http://robertcausey.github.io/AVS146/To_Do_List_AVS146.htm> Assignments needed to complete AVS146</A>
@@ -52,7 +52,7 @@ If you are trying to reach me feel free to call or text me at 207-922-7475. Emai
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/900_lecture_materials.htm>AVS 303 - Equine Management Cooperative</A><p>
 <A HREF=https://robertcausey.github.io/AVS353/REPRO.HTM>AVS 353 - Equine Reproduction and Breeding Management</A><p>
 <A HREF=https://robertcausey.github.io/AVS393/stblec1_2023.htm>AVS 393 - Training the Standardbred Horse</A><p>
-<A HREF=https://robertcausey.github.io/AVS397/syllabusAVS397.pdf>AVS 397 - Equine Intership</A><p>
+<A HREF=https://robertcausey.github.io/AVS397/Spring2025_Anatomy_physiotherapy.htm>AVS 397 - Equine Intership</A><p>
 <A HREF=https://robertcausey.github.io/RLE150/rle150.htm>RLE 150 - Greener Pastures</A><p>
 </blockquote>
 <H3>Safety Links</H3>
