--- a/AVS397/Spring2025_Anatomy_physiotherapy.htm
+++ b/AVS397/Spring2025_Anatomy_physiotherapy.htm
@@ -31,7 +31,7 @@
 <A HREF=https://youtu.be/OLJ64av0HwQ>9. Physiotherapy Treatment - Massages, Stretching, Mobilization</A><br>
 <A HREF=https://forms.gle/iM1zXPRkBz2T8AmTA>Self assessment</A><p>
 </blockquote>
-<A HREF=https://robertcausey.github.io/AVS397/syllabusAVS397.pdf>Syllabus fo AVS 397</A>
+<A HREF=https://robertcausey.github.io/AVS397/syllabusAVS397.pdf>Syllabus for AVS 397</A>
         </body>                                                          </html>
 
 
