--- a/AVS353/video_archive_AVS353.htm
+++ b/AVS353/video_archive_AVS353.htm
@@ -24,7 +24,7 @@ The purpose of this page is to provide links to videos of lectures and  movies u
 <A HREF=https://video.maine.edu/media/2022-01-19_AVS+353_Grading_Aristotle./1_d5l680qb>2022-01-19 Lecture</A> <BR><A HREF=https://video.maine.edu/media/2021-01-27_AVS+353+Equine+Reproduction_Intro+and+Aristotle/1_cxtk69y7>2021-01-27 Lecture</A> <p>
 <B>Basic Mammalian Reproduction</B><BR> 
 ...in which we discuss basic mammalian reproduction and hormones.<p>
-<A HREF=https://video.maine.edu/media/2025_02_05_hormones_AVS353_Equine_Reproduction/1_e5joxa0h>2025_02_05</A>
+<A HREF=https://video.maine.edu/media/2025_02_05_hormones_AVS353_Equine_Reproduction/1_e5joxa0h>2025-02-05 Lecture</A><br>
 <A HREF=https://video.maine.edu/media/AVS353-Equine+Reproduction/1_isccncsi>2024-01-31 Lecture</A><br>
 <A HREF=https://video.maine.edu/media/2022-01-26_AVS_353_Basic_Mammalian_Reproduction/1_up8bfml6>2022-01-26 Lecture</A> <BR>
 <A HREF=https://video.maine.edu/media/2020-02-03_AVS+353_Lecture_Basic-Reproduction_hormones/1_q4p51qpt>2021-02-03 Lecture</A><p>
