--- a/AVS196_303/AVS303_Lecture_Material/901_lecture_video.htm
+++ b/AVS196_303/AVS303_Lecture_Material/901_lecture_video.htm
@@ -13,6 +13,7 @@
 	Welcome! This page provides all the videos associated with lecture topics in AVS 196/303. A separate page, the <A HREF=902_farmlab_video_archive.htm>Farm and Labs</A> video archive contains all the videos of "hands-on" activities in the horse barn, such as chore procedures, horse - labs etc. Lectures will be added as they are completed.
 		<H3>Horse Identification </H3> <blockquote>
 			A brief review of safety training and lecture on coat color and horse identification.<p>
+			<A HREF=https://video.maine.edu/media/2025_02_03-CoatcolorAVS196_303-lecture_video/1_o300zkra>2025-02-03</A><br>
 			<A HREF=https://video.maine.edu/media/2021_02_01_AVS196-303_Joint-Lecture_Coat-Color/1_okrz77ir>2021-02-01</A><br>
 			<A HREF=https://video.maine.edu/media/2021_05_10_AVS196-303_Introduction+%28summer%29/1_nhne32o5>2021-05-10</A><br>
 			<A HREF=https://video.maine.edu/media/2021_05_17_AVS196-303_Joint-Lecture_Coat-color_Identification/1_y788bpbs>2021-05-17</A><br> 
@@ -20,6 +21,7 @@
 
 		</blockquote>	<H3>Physical Examination and Body Condition Scoring </H3> <blockquote>
  A brief review of physical examination in the horse.<p>
+			<A HREF=https://video.maine.edu/media/2025_02_10-Physical+examination-AVS303-Lecture+video/1_f7w8f6h1>2025-02-10</A><br>
 			<A HREF=https://video.maine.edu/media/2021_03_01_AVS196-303_Joint-Lecture_Physical-Examination/1_2iirh16m>2021-03-01</A><br>
 			<A HREF=https://video.maine.edu/media/2022_01_31-AVS196_303_shared_lecture_markings_physical_exam/1_q5vxpvkw>2022-01-24</A><p>
 		</blockquote>	<H3>Digestion - Gut anatomy, nutrition and feeding</H3> <blockquote>
