updating AVS353 artoon and video archives

--- a/AVS353/video_archive_AVS353.htm
+++ b/AVS353/video_archive_AVS353.htm
@@ -20,6 +20,7 @@ a {
 The purpose of this page is to provide links to videos of lectures and  movies used in class. The videos are grouped according to subject. Lecture videos are labelled by date of the lecture.<p>
 <B>Aristotle and Equine Reproduction</B><BR>
 ...in which we grade Aristotle on his knowledge of equine reproduction.<br>
+<A HREF=https://video.maine.edu/media/2025_02_12-meiosis_season_behavior_fol_cl_AVS353-lecture_video/1_3g8n8baf>2025_02_12_lecture</A><br>
 <A HREF=https://video.maine.edu/media/2025_01_22_Intro_Aristotle_AVS+353_lecture_video/1_r29p0udw>2025_01_22_lecture</A><BR>
 <A HREF=https://video.maine.edu/media/2022-01-19_AVS+353_Grading_Aristotle./1_d5l680qb>2022-01-19 Lecture</A> <BR><A HREF=https://video.maine.edu/media/2021-01-27_AVS+353+Equine+Reproduction_Intro+and+Aristotle/1_cxtk69y7>2021-01-27 Lecture</A> <p>
 <B>Basic Mammalian Reproduction</B><BR> 
