--- a/AVS353/video_archive_AVS353.htm
+++ b/AVS353/video_archive_AVS353.htm
@@ -20,11 +20,11 @@ a {
 The purpose of this page is to provide links to videos of lectures and  movies used in class. The videos are grouped according to subject. Lecture videos are labelled by date of the lecture.<p>
 <B>Aristotle and Equine Reproduction</B><BR>
 ...in which we grade Aristotle on his knowledge of equine reproduction.<br>
-<A HREF=https://video.maine.edu/media/2025_01_22_Intro_Aristotle_AVS+353_lecture_video/1_r29p0udw>2025_01_22_lecture</A><BR>
+<A HREF=https://video.maine.edu/media/2025_01_22_Intro_Aristotle_AVS+353_lecture_video/1_r29p0udw>2025-01-22_lecture</A><BR>
 <A HREF=https://video.maine.edu/media/2022-01-19_AVS+353_Grading_Aristotle./1_d5l680qb>2022-01-19 Lecture</A> <BR><A HREF=https://video.maine.edu/media/2021-01-27_AVS+353+Equine+Reproduction_Intro+and+Aristotle/1_cxtk69y7>2021-01-27 Lecture</A> <p>
 <B>Basic Mammalian Reproduction</B><BR> 
 ...in which we discuss basic mammalian reproduction and hormones.<p>
-<A HREF=https://video.maine.edu/media/2025_02_12-meiosis_season_behavior_fol_cl_AVS353-lecture_video/1_3g8n8baf>2025_02_12_lecture</A><br>
+<A HREF=https://video.maine.edu/media/2025_02_12-meiosis_season_behavior_fol_cl_AVS353-lecture_video/1_3g8n8baf>2025-02-12_lecture</A><br>
 <A HREF=https://video.maine.edu/media/2025_02_05_hormones_AVS353_Equine_Reproduction/1_e5joxa0h>2025-02-05 Lecture</A><br>
 <A HREF=https://video.maine.edu/media/AVS353-Equine+Reproduction/1_isccncsi>2024-01-31 Lecture</A><br>
 <A HREF=https://video.maine.edu/media/2022-01-26_AVS_353_Basic_Mammalian_Reproduction/1_up8bfml6>2022-01-26 Lecture</A> <BR>
@@ -36,7 +36,7 @@ The purpose of this page is to provide links to videos of lectures and  movies u
 <A HREF=https://video.maine.edu/media/2020-02-10_AVS+353_Lecture_Basic-Reproduction_hormones-2/1_5giftn5x>2021-02-10 Lecture</A><p>
 <!-- XXXXXXXXXXXXXXXXXXXXXXXX--> 
 ... and finally we focus on fertilization, early embryonic development, parturition, lactation, and hormonal control<p>
-
+<A HREF=https://video.maine.edu/media/AVS353+Equine+Reproduction/1_55wjfxz3>2025-02-19 Lecture</a><BR>
 <A HREF=https://video.maine.edu/media/AVS353-Equine+Reproduction/1_irh10q1q>2024-02-21 Lecture</a><BR>
 <A HREF=https://video.maine.edu/media/AVS353-Equine+Reproduction/1_40apbtnf>2024-02-14 Lecture</a><BR>
 <A HREF=https://video.maine.edu/media/2022_02_09_AVS_353_regnancy_parturition_etc/1_lh640w1s>2022-02-09 Lecture</A> <br>
@@ -44,6 +44,7 @@ The purpose of this page is to provide links to videos of lectures and  movies u
 <p>
 <B>Reproductive Anatomy</B><BR>
 Estrous cycle review and Reproductive Anatomy: Pineal gland, hypothalamus, pituitary, ovaries, uterus, follicle, CL, counter current exchange mechanism for systemic distribution of prostaglandin, uterine glands, myometrium, cervix, changes with cycle, etc.<p>
+<A HREF=https://video.maine.edu/media/AVS353+Equine+Reproduction/1_qidebz9v>2025-02-26_lecture</A><br>
 <A HREF=https://video.maine.edu/media/AVS353-Equine+Reproduction/1_pmb716hv>
 2024-02-28_Lecture</A><br>
 <A HREF=https://video.maine.edu/media/2022_03_02_AVS_353_estrous_cycle_reproductive_anatomy/1_z44hk818>2022-03-02 Lecture</A> <br>
@@ -51,22 +52,25 @@ Estrous cycle review and Reproductive Anatomy: Pineal gland, hypothalamus, pitui
 <A HREF=https://video.maine.edu/media/2021-03-03_AVS+353_Lecture_Reproductive_Anatomy_2/1_kf39mrc5>2021-03-03 Lecture</A>  <p>
 <B>Reproductive Seasonality</B><BR>
 Reproductive Seasonality: a review of imposed breeding seasons and reproductive patterns through the year. Understanding seasonal changes in the mare is the key to making good breeding management decisions.<p>
+<A HREF=https://video.maine.edu/media/AVS353+Equine+Reproduction/1_ydvpzw3q>2025-03-05_lecture</A><br>
 <A HREF=https://video.maine.edu/media/2022_02_16_AVS_353_reproductive+seasonality/1_s7mt4ada>2022-02-16 Lecture</A> <br> 
 <A HREF=https://video.maine.edu/media/2021-03-10_AVS+353_Lecture_Reproductive_Seasonality/1_5nbijjky>2021-03-10 Lecture</A> 
 <p>
 <B>Estrous Cycle</B><br>
 Estrous Cycle: a review of the changes between estrus and diestrus of equine behavior, ovarian dynamics (follicular growth, ovulation, CL maintenance and luteolysis), gonadotropins (FSH and LH), ovarian steroids (estrogen and progesterone), inhibin, and prostaglandin F 2 alpha.<p>
+<A HREF=https://video.maine.edu/media/AVS353+Equine+Reproduction/1_5k1oswxw>2025-03-12_lecture</A><br>
 <A HREF=https://video.maine.edu/media/AVS353-Equine+Reproduction/1_9w954t62>2024-03-08 Lecture</A><br>
 <A HREF=https://video.maine.edu/media/2022_02_23_AVS_353_estrous_cycle/1_77jav7wj>2022-23-17 Lecture</A><br>  
 <A HREF=https://video.maine.edu/media/2021-03-17_AVS+353_Lecture_Estrous-Cycle/1_vtwahzw2>2021-03-17 Lecture</A> 
 <p>
 <B>Endocrinology of Pregnancy</B><BR>
 Endocrinology of Pregnancy. The three luteal responses, the role of progestogens and estrogens from the ovary and fetoplacental unit (fetal gonads and placenta) in supporting pregnancy. Appearance of equine chorionic gonadotropin to drive second and third luteal responses. Development of the fetus and fetal movement.<p>
+<A HREF=https://video.maine.edu/media/AVS353+Equine+Reproduction/1_14ydobz0>2025-03-26 Lecture</A><br>
 <A HREF=https://video.maine.edu/media/AVS353-Equine+Reproduction/1_3qal8g9g>2024-03-27 Lecture</A><br>
 <A HREF=https://video.maine.edu/media/AVS353-Equine+Reproduction/1_knycsmaw>2024-03-20 Lecture</A><br>
 <A HREF=https://video.maine.edu/media/2022_03_09_AVS_353_endocrinology_of_pregnancy/1_5ijrgehc>2022-03-09 Lecture</A> <br>
 <A HREF=https://video.maine.edu/media/2022_03_23_AVS_353_endocrinology_of_pregnancy/1_wbox6hzk>2022-03-23 Lecture</A> <br>
-<A HREF=https://video.maine.edu/media/2022_03_30_AVS_353_fetal_development/1_7kswb5rw>2022-03-30 Lecture</A> <p>
+<A HREF=https://video.maine.edu/media/2022_03_30_AVS_353_fetal_development/1_7kswb5rw>2022-03-30 Lecture</A> <br>
 <A HREF=https://video.maine.edu/media/2021-03-31_AVS+353_Lecture_Endocrinology_of_pregnancy/1_uiylp0pk>2021-03-31 Lecture</A> 
 <p>
 The embryonic vesicle, its mobility. Early embryology related to appearance on ultrasound. Allantois and yolk sac. Formation of the three walled placenta.<br>
