--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ a {
 <BODY bgcolor=GainsBoro>
 <H1><CENTER>Robert Causey - Helpful Links for Students</CENTER></H1>
 <P>
-<div align="right"><I>Updated Wesnesday 01/29/2025</I></div>
+<div align="right"><I>Updated Wednesday 09/03/2025</I></div><p>
 <!--<center>
 <H2> Link to Assignments List for AVS 146 </H2>
 		<A HREF= http://robertcausey.github.io/AVS146/To_Do_List_AVS146.htm> Assignments needed to complete AVS146</A>
