--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@ a {
 </HEAD>
 <BODY bgcolor=GainsBoro>
 <H1><CENTER>Robert Causey - Helpful Links for Students</CENTER></H1>
-<P>
+<P> <Center><A HREF=thisworld.html>Mary Oliver (1935-2019)</A><br>"So fancy is the world..."<P>
+</center>
 <div align="right"><I>Updated Wednesday 09/03/2025</I></div><p>
 <!--<center>
 <H2> Link to Assignments List for AVS 146 </H2>
