--- a/welcomewitter.html
+++ b/welcomewitter.html
@@ -15,7 +15,7 @@ a {
 <P>
 			Hi everyone! Welcome to the Witter Center Horse barn! <P>To begin, here are some "virtual chores" we need you to do. It is necessary paperwork and documentation of various trainings.  You can access it through the links below.<p>
 You need to do the following two things:<p>
-1. Fill out <A HREF=https://forms.gle/KbDZEwdoTM36or9C9>this form </A>which has:<blockquote>Emergency Contact<BR>Release and Assumption of Risk<BR> Riding protocol<BR>Helmet policy<p></blockquote>
+1. Fill out <A HREF=https://forms.gle/dMiZNR8YNZyNtBVY7>this form </A>which has:<blockquote>Emergency Contact<BR>Release and Assumption of Risk<BR> Riding protocol<BR>Helmet policy<p></blockquote>
 2. Complete your online basic and farm safety training: <blockquote><A HREF=https://mycampus.maine.edu/group/mycampus/sm-training>On-Line Safety Training home page:</A> Complete the safety training here.<P>
 <A HREF=https://forms.gle/q2fUDJskgqmmnaDB6>Upload Here</A> your annual <b>basic safety</b> and <b>farm safety </b>certificates.<p><A HREF=https://video.maine.edu/media/2021-03-10_How+to+do+Online+Safety+Training./1_rzjfkyk8>An optional short video </A> to show how to do basic and farm safety training. To save your certificates, you should take a screen shot. On Windows use snipping tool and select a "rectangular snip", on Mac use Shift-Cntrl-4. For farm safety you can save the certificate as a pdf if you print the file, and select the printer called "save as pdf" or equivalent. If you are struggling please feel free to call me at 207-922-7475 or text me at the same number.</blockquote><p>
 <!--3. Please indicate your availability for labs here: <blockquote><A HREF=https://forms.gle/GBgoW6tKhWzyS5x37>Summer 2021-Your availability for labs etc.</A><p>-->
