uploading farm info

--- a/welcomewitter.html
+++ b/welcomewitter.html
@@ -11,7 +11,7 @@ a {
 </HEAD>
 <BODY bgcolor=GainsBoro>
 <CENTER><H1>Welcome to the Witter Center</H1>
-<H3>AVS 196, 303, 397, Drill team, etc</H3></CENTER>
+<H3>AVS 196, 303, 396</H3></CENTER>
 <P>
 			Hi everyone! Welcome to the Witter Center Horse barn! <P>To begin, here are some "virtual chores" we need you to do. It is necessary paperwork and documentation of various trainings.  You can access it through the links below.<p>
 You need to do the following two things:<p>
