--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ a {
 <H1><CENTER>Robert Causey - Helpful Links for Students</CENTER></H1>
 <P> <Center><A HREF=thisworld.html>Mary Oliver (1935-2019)</A><br>"So fancy is the world..."<P>
 </center>
-<div align="right"><I>Updated Wednesday 09/03/2025</I></div><p>
+<div align="right"><I>Updated Wednesday 02/02/2026</I></div><p>
 <!--<center>
 <H2> Link to Assignments List for AVS 146 </H2>
 		<A HREF= http://robertcausey.github.io/AVS146/To_Do_List_AVS146.htm> Assignments needed to complete AVS146</A>
@@ -35,9 +35,9 @@ If you are trying to reach me feel free to call or text me at 207-922-7475. Emai
 </blockquote>
 <H3>Horse Barn</H3>
 <blockquote>
-<A HREF=https://robertcausey.github.io/welcomewitter.html>Welcome to the Witter Center.</A> Required paperwork for students in AVS 196, 303, 397 and drill team etc. <p>
+<A HREF=https://robertcausey.github.io/welcomewitter.html>Welcome to the Witter Center.</A> Required paperwork for students in AVS 196, 303, 396. <p>
 <A HREF=Barn_Manual/barnmanual.htm>Barn Manual</A><p>
-<A HREF=http://f1.weather.gov/MapClick.php?lat=44.88693400000005&lon=-68.6656926#.WbFjWEqGMtU>Orono Weather - check hourly forecast</A><p>
+<A HREF=https://forecast.weather.gov/MapClick.php?lat=44.8835&lon=-68.6721>Orono Weather - check hourly forecast</A><p>
 </blockquote>
 <H3>Senior Topics</H3>
 <blockquote>
