--- a/welcomewitter.html
+++ b/welcomewitter.html
@@ -17,8 +17,8 @@ a {
 You need to do the following two things:<p>
 1. Fill out <A HREF=https://forms.gle/fD5u7P6CXiGZLMm9>this Form</A> which has:<blockquote>Emergency Contact<BR>Release and Assumption of Risk<BR> Riding protocol<BR>Helmet policy<p></blockquote>
 2. Complete your online basic and farm safety training: <blockquote><A HREF=https://mycampus.maine.edu/group/mycampus/sm-training>On-Line Safety Training home page:</A> Complete the safety training here.<P>
-<A HREF=https://forms.gle/q2fUDJskgqmmnaDB6>Upload Here</A> your annual <b>basic safety</b> certificates.<p><A HREF=https://video.maine.edu/media/2021-03-10_How+to+do+Online+Safety+Training./1_rzjfkyk8>An optional short video </A> to show how to do basic safety training. To save your certificate, you should take a screen shot. On Windows use snipping tool and select a "rectangular snip", on Mac use Shift-Cntrl-4. If you are struggling please feel free to call me at 207-922-7475 or text me at the same number.</blockquote><p>
-Please study this <A HREF=https://robertcausey.github.io/farm_safety_handout.pdf>Farm Safety Handout</A> and complete the quiz on farm safety <A HREF=https://forms.gle/Q6XPtoizSbiYirFd6>here</A>.
+<A HREF=https://forms.gle/q2fUDJskgqmmnaDB6>Upload Here</A> your annual <b>basic safety</b> certificate.<p><A HREF=https://video.maine.edu/media/2021-03-10_How+to+do+Online+Safety+Training./1_rzjfkyk8>An optional short video </A> to show how to do basic safety training. To save your certificate, you should take a screen shot. On Windows use snipping tool and select a "rectangular snip", on Mac use Shift-Cntrl-4. If you are struggling please feel free to call me at 207-922-7475 or text me at the same number.</blockquote><p>
+3. Please study this <A HREF=https://robertcausey.github.io/farm_safety_handout.pdf>Farm Safety Handout</A> and complete the quiz on farm safety <A HREF=https://forms.gle/Q6XPtoizSbiYirFd6>here</A>.
 <!--3. Please indicate your availability for labs here: <blockquote><A HREF=https://forms.gle/GBgoW6tKhWzyS5x37>Summer 2021-Your availability for labs etc.</A><p>-->
 </blockquote>
 </BODY>
