--- a/AVS437/03_parasites.html
+++ b/AVS437/03_parasites.html
@@ -18,7 +18,7 @@ In this module we will survey parasites, which are eukaryotic organisms, other t
 <B>Protozoa</B>
 <Blockquote>
 <A HREF=https://en.wikipedia.org/wiki/Coccidiosis#:~:text=Symptoms%20in%20cats%20include%20fever,are%20usually%20treated%20with%20clindamycin.>Coccidia<BR>
-<A HREF=https://en.wikipedia.org/wiki/Giardiagiardia>Giardia</A><BR>
+<A HREF=https://en.wikipedia.org/wiki/Giardia>Giardia</A><BR>
 <A HREF=https://en.wikipedia.org/wiki/Malaria>Malaria - Plasmodium</A><BR>
 <A HREF=https://www.cdc.gov/dpdx/sarcocystosis/index.html>Sarcocystis sp</A><BR>
 </blockquote>
