--- a/AVS437/03_parasites.html
+++ b/AVS437/03_parasites.html
@@ -27,8 +27,8 @@ Helminths are divided into platyhelminths (cestodes and trematodes) and nematode
 <Blockquote>
 <B><em>Cestodes</em></B><BR>
 Cestodes have a predator-prey life cycle:<br>
-<A HREF=https://images.app.goo.gl/GEsJ6qaJj72BMxjd7>Echinococcus granulosus</A>, tape worm of dogs uses ruminants as prey.<BR>
-<A HREF=https://en.wikipedia.org/wiki/Dipylidium_caninum>Dipylidium caninum</A> - flea is the prey eaten by the dog or cat<p>
+<A HREF=https://www.cdc.gov/dpdx/echinococcosis/index.html>Echinococcus granulosus</A>, tape worm of dogs uses ruminants as prey.<BR>
+<A HREF=https://www.cdc.gov/dpdx/dipylidium/index.html>Dipylidium caninum</A> - flea is the prey eaten by the dog or cat<p>
 <B><em>Trematodes</em></B><br>
 <A HREF=https://en.wikipedia.org/wiki/Liver_fluke>Liver fluke</A><P>
 <B><em>Nematodes</em></B><br>
