--- a/AVS437/03_parasites.html
+++ b/AVS437/03_parasites.html
@@ -27,7 +27,7 @@ Helminths are divided into platyhelminths (cestodes and trematodes) and nematode
 <Blockquote>
 <B><em>Cestodes</em></B><BR>
 Cestodes have a predator-prey life cycle:<br>
-<A HREF=https://www.cdc.gov/dpdx/echinococcosis/index.html>Echinococcus granulosus</A>, tape worm of dogs uses ruminants as prey.<BR>
+<A HREF=https://www.cdc.gov/dpdx/echinococcosis/modules/Echinococcus_gran_LifeCycle_lg.jpg>Echinococcus granulosus</A>, tape worm of dogs uses ruminants as prey.<BR>
 <A HREF=https://www.cdc.gov/dpdx/dipylidium/index.html>Dipylidium caninum</A> - flea is the prey eaten by the dog or cat<p>
 <B><em>Trematodes</em></B><br>
 <A HREF=https://en.wikipedia.org/wiki/Liver_fluke>Liver fluke</A><P>
