--- a/AVS437/03_parasites.html
+++ b/AVS437/03_parasites.html
@@ -30,7 +30,7 @@ Cestodes have a predator-prey life cycle:<br>
 <A HREF=https://www.cdc.gov/dpdx/echinococcosis/index.html>Echinococcus granulosus</A>, tape worm of dogs uses ruminants as prey.<BR>
 <A HREF=https://www.cdc.gov/dpdx/dipylidium/index.html>Dipylidium caninum</A> - flea is the prey eaten by the dog or cat<p>
 <B><em>Trematodes</em></B><br>
-<A HREF=https://en.wikipedia.org/wiki/Liver_fluke>Liver fluke</A><P>
+<A HREF=https://www.cdc.gov/dpdx/fascioliasis/index.html>Liver fluke</A><P>
 <B><em>Nematodes</em></B><br>
 It may be a gross oversimplification, but round worms may be subdivided into <A HREF=https://en.wikipedia.org/wiki/Ascaris>Ascarids</A> (round worms of nneonates and young animals),  strongyle types worms (<A HREF=https://en.wikipedia.org/wiki/Rhabditida>Rhabditia</A>) including <em>Strongylus vulgaris</em> in horses, <em>Ancylostomum caninum</em> in dogs, <em>Haemonchus contortus</em> in sheep), and whipworms <A HREF=https://en.wikipedia.org/wiki/Trichuridae>Trichuridae</A>.  
 </blockquote>
